--- a/DesktopBiblioteca.csproj
+++ b/DesktopBiblioteca.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Syncfusion.Core.WinForms" Version="20.4.0.50" />
   </ItemGroup>
 
   <ItemGroup>
